# Chess-Engine-Artificial-Intelligence

./: .gitignore  CMakeLists.txt  README.md
include/board/: board.hpp
include/book/: book.hpp
include/endgame/: tablebases.hpp
include/engine/: engine.hpp
include/eval/: evaluator.hpp
include/mcts/: mcts.hpp
include/movegen/: movegen.hpp
include/neural/: network.hpp  neural_network.hpp
include/search/: search.hpp  time_manager.hpp
include/utils/: move_generator.hpp
src/: main.cpp
src/board/: board.cpp
src/book/: book.cpp
src/endgame/: tablebases.cpp
src/engine/: engine.cpp  hypermodern_system.cpp  personality.cpp
src/eval/: evaluator.cpp
src/learning/: adaptive_learning.cpp
src/mcts/: mcts.cpp
src/movegen/: movegen.cpp
src/neural/: network.cpp  neural_network.cpp
src/search/: search.cpp
src/strategy/: ultimate_strategy.cpp
src/tactics/: supreme_tactics.cpp
src/utils/: move_generator.cpp
